Updates POST requests for newActor and uploadScript to 201 status instead of 200.
